@@ -1,3 +1,8 @@
+2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/install/index.html: Add stable/development/old branch to
+	headers.
+
 2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/devel.ihtml: announce .29 for mac too.
